--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "dev": "nodemon --exec babel-node src/app.js",
     "build": "babel src --out-dir dist --copy-files",
-    "start": "npm run build && forever dist/app.js"
+    "start": "npm run build && forever dist/app.js",
+    "lint": "eslint 'src/**/*.js' 'test/**/*.js' --fix",
+    "precommit": "lint-staged"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -31,5 +33,11 @@
   },
   "dependencies": {
     "forever": "^2.0.0"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
